Fix(desk check fixes) changed the padding on the dashboard containers and aligned text to be left

--- a/src/sass/modules/account.scss
+++ b/src/sass/modules/account.scss
@@ -26,11 +26,22 @@
     display: flex;
     justify-content: flex-start;
 
-    @media #{$mobile} {
-        flex-wrap: wrap;
+    i {
+        padding-bottom: 10px; 
     }
 
     a {
         text-align: center;
+    }
+
+    @media #{$mobile} {
+        i {
+            padding-bottom: 0; 
+        }
+        flex-wrap: wrap;
+        
+        a {
+            text-align: left;
+        }
     }
 }
